--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <!-- Custom CSS -->
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,14 +51,14 @@
       <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
       <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
-      <img src="dice-5.png" alt="Dice" class="dice">
+      <img src="img/dice-5.png" alt="Dice" class="dice">
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
